--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,21 @@ matrix:
     - os: linux
       env: FLAVOR=linux CXX=clang++ BUILDTYPE=Release
     - os: linux
-      env: FLAVOR=android ANDROID_ABI=arm-v7 BUILDTYPE=Release
+      env: FLAVOR=android ANDROID_ABIS="arm-v7 arm-v8" BUILDTYPE=Release
+      android:
+        components:
+          - build-tools-22.0.0
+          - android-22
+          - extra
+    - os: linux
+      env: FLAVOR=android ANDROID_ABIS="x86 x86-64" BUILDTYPE=Release
+      android:
+        components:
+          - build-tools-22.0.0
+          - android-22
+          - extra
+    - os: linux
+      env: FLAVOR=android ANDROID_ABIS="mips mips-64" BUILDTYPE=Release
       android:
         components:
           - build-tools-22.0.0
